--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,9 @@
                     <div class="menu">
                         <ul class="menu__inner">
                             <li class="menu__item intro">Dog lover</li>
-                            <li class="menu__item intro">Motorcycle beginner</li>
+                            <li class="menu__item intro">Ride Motorcycle</li>
                             <li class="menu__item intro">Slow-to-warm-up human</li>
-                            <li class="menu__item intro">Used to live in <a href="https://en.wikipedia.org/wiki/Shanghai">Shanghai, China</a></li>
+                            <li class="menu__item intro">Homeless</a></li>
                             <li class="menu__item intro">Currently living in beautiful <a href="https://en.wikipedia.org/wiki/Auckland">Auckland, New Zealand</a></li>
                         </ul>
                     </div>
@@ -46,7 +46,7 @@
                     </div>
                     <div class="content__bottom">
                         <div class="switch mode mode--design">
-                            <a class="switch__item switch__item--current">funmaker</a>
+                            <a class="switch__item switch__item--current">nomad</a>
                             <a class="switch__item"><span class="mode mode--design" data-switch data-glitch>coder</span></a>
                         </div>
                         <div class="link-wrap">
